; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/i386/extr_i386.c_ix86_fp_comparison_arithmetics_cost.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/i386/extr_i386.c_ix86_fp_comparison_arithmetics_cost.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TARGET_IEEE_FP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ix86_fp_comparison_arithmetics_cost to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ix86_fp_comparison_arithmetics_cost(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* @TARGET_IEEE_FP, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 4, i32* %2, align 4
  br label %14

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  switch i32 %8, label %12 [
    i32 130, label %9
    i32 129, label %9
    i32 136, label %9
    i32 139, label %9
    i32 140, label %9
    i32 128, label %9
    i32 134, label %9
    i32 133, label %9
    i32 137, label %10
    i32 135, label %10
    i32 141, label %10
    i32 132, label %10
    i32 138, label %11
    i32 131, label %11
  ]

9:                                                ; preds = %7, %7, %7, %7, %7, %7, %7, %7
  store i32 4, i32* %2, align 4
  br label %14

10:                                               ; preds = %7, %7, %7, %7
  store i32 5, i32* %2, align 4
  br label %14

11:                                               ; preds = %7, %7
  store i32 6, i32* %2, align 4
  br label %14

12:                                               ; preds = %7
  %13 = call i32 (...) @gcc_unreachable()
  br label %14

14:                                               ; preds = %6, %9, %10, %11, %12
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @gcc_unreachable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
